Fri Jun 10 15:59:42 CEST 2011 <Daniel.Diaz@univ-paris1.fr>

	* GNU Prolog is now licensed under a dual license LGPL or GLP
	* port to x86_64/MinGW64 - many thanks to:
	  Jasper Taylor <jasper@simulistics.com> (see src/WINDOWS64)
	* port to x86_64/MSVC (see src/WINDOWS64)
	* add a configure option to control Windows HtmlHelp
	  --disable-htmlhelp or --enable-htmlhelp[=static/dynamic]
	* improve a lot (and fix some bugs in) the Windows GUI Console
	* change location of gprologvars.bat under Windows (in install directory)
	* increase default stack sizes (32Mb for heap, 16Mb for others)
	* change the default setting for flag strict_iso: it is on now
	* add control constructs to the predicate table
	* modify predicate_property/2 (built_in_fd ==> built_in, add control_construct)
	  only accepts a Head (a callable) (no longer a predicate indicator)
	* fix a bug in the compiler (bad unification with singleton variable)
	* fix a bug with strict_iso flag (was not passed to consult)
	* add shebang support using #!/usr/bin/gprolog --consult-file
	* modify the mangling scheme for future module support (see hexgplc)
	* fix write_term default options (now numbervars(false) and namevars(false))
	* fix read/1: tab and newlines are not accepted inside single/back/double quoted tokens
	* add additional errors to compare/3 and keysort/2
	* accept space under the top-level (same as ;)
	* modify portray_clause/1-2 to add a newline at the end of the output
	* add acyclic_term/1 (compatibility only since GNU Prolog does not handle cyclic terms)
	* fix write/1 to treat '$VARNAME'(Atom) as a var name only if Atom is a valid var name

Mon Nov 29 15:48:25 CET 2010 <Daniel.Diaz@univ-paris1.fr>

	* rename evaluable functor atan/2 as atan2/2 and >< as xor
	* add evaluable functor div/2
	* detect op/3 error cases for | [] {}
	* replace type_error(variable, X) by uninstantiation_error(X) (e.g. open/3-4)

Fri Nov 26 12:00:32 CEST 2010 <Daniel.Diaz@univ-paris1.fr>
