@@ -1,1 +1,1 @@
-gprolog-1.4.0
+gprolog-1.4.1
