@@ -318,6 +318,24 @@ Need_Space(int c)
 
 
 /*-------------------------------------------------------------------------*
+ * PL_WRITE_A_FULL_STOP                                                    *
+ *                                                                         *
+ *-------------------------------------------------------------------------*/
+void
+Pl_Write_A_Full_Stop(StmInf *pstm)
+{
+  pstm_o = pstm;
+  if (pl_last_writing == W_NUMBER_0 || pl_last_writing == W_NUMBER)
+    pl_last_writing = W_NOTHING;
+
+  Out_Char('.');
+  Out_Char('\n');
+}
+
+
+
+
+/*-------------------------------------------------------------------------*
  * PL_WRITE_A_CHAR                                                         *
  *                                                                         *
  *-------------------------------------------------------------------------*/
