@@ -1,3 +1,15 @@
+Thu Nov 24 09:28:38 CET 2011 <Daniel.Diaz@univ-paris1.fr>
+
+	* port to x86_64/Darwin (Mac OS X) - many thanks to:
+	  Ozaki Kiichi <gclient.gaap@gmail.com>
+	  Use ./configure --build=x86_64-apple-darwin --host=x86_64-apple-darwin
+	* fix bug in x86_64 with --disable-regs
+	* fix a bug when consulting a file under Win XP/Vista 32 bits
+	* fix a bug when consulting a file using '$VAR'(N) or '$VARNAME'(A)
+	* fix a bug in new_atom/1-2 which returned duplicates
+	* fix a bug in write/1 when an empty atom is passed
+	* improve portray_clause (numbervars and space before final dot)
+
 Fri Jun 10 15:59:42 CEST 2011 <Daniel.Diaz@univ-paris1.fr>
 
 	* GNU Prolog is now licensed under a dual license LGPL or GLP
